# lucide-slint

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE-MIT  README.md  publish.bat  run.bat
.github/workflow/: publish.yml
.github/workflows/: publish.yml
builder/: Cargo.toml  slint.template
builder/src/: definition.rs  generate.rs  main.rs  publish.rs
lucide-slint/: .gitignore  Cargo.toml  README.md
lucide-slint/src/: lib.rs
svgoptimize/: package.json  pnpm-lock.yaml
svgoptimize/src/: main.js
